# mkdocs-simple-plugin

./: .copier-answers.ci.yml  .gitignore  .mkdocsignore  .pages  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  action.md  action.yml  build.sh  deploy.sh  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh  test.sh  versions.json
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/: bump.sh  bump_tag.sh  ci-config.yml  cleanup_tag.sh  dependabot.yml  pr-labeler.yml  publish_pypi.sh  release-drafter.yml  release_template.md
dev/: .pages  404.html  LICENSE  index.html  setup.snippet  sitemap.xml
docker/: README.md  build_local.sh  deploy.sh  docker.md  entrypoint.sh  requirements.txt  update.sh
docs/: action.md  docker.md  mkdocs-simple-gen.md  mkdocs-simple-plugin.md  plugin-developers.md  plugin.md
examples/: .gitignore  .pages  README.md.jinja  gen_readme.py
latest/: 404.html  index.html
mkdocs_simple_plugin/: README.md  __init__.py  __main__.py  gen.py  generator.md  generator.py  plugin.md  plugin.py  semiliterate.py  simple.py
release/: bump.py  release_tag.sh
tests/: generator_test.py  integration.bats  integration_test.bats  run_integration_tests.sh  run_linters.sh  run_local_tests.sh  run_tests_local.sh  run_unit_tests.sh  test.bats  test.sh  test_flake8.sh  test_generator.py  test_lint.sh  test_local.sh  test_semiliterate.py  test_simple.py
v1.1.0/: 404.html  build.sh  build.snippet  index.html  mike-mkdocs76_q0xgo.yml  sitemap.xml
v1.1.1/: 404.html  build.sh  build.snippet  index.html  mike-mkdocsbtiwqhsj.yml  sitemap.xml
v2.0.0/: 404.html  build.snippet  index.html  sitemap.xml
v2.1.0/: 404.html  index.html  sitemap.xml
v2.1.1/: 404.html  index.html  sitemap.xml  versions.snippet
v2.1.2/: 404.html  sitemap.xml
v2.1.3/: index.html
v2.2.0/: index.html  sitemap.xml  versions.snippet
v2.3.0/: 404.html  index.html  sitemap.xml
v3.0.0/: 404.html  index.html  sitemap.xml
(+1045 files in other folders)
